--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     build: .
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - ./app:/app
+      - .:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
     environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/appdb
+      - DATABASE_URL=postgresql+asyncpg://user:password@db:5432/appdb
 
   db:
     image: postgres:13-alpine
@@ -22,7 +22,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=appdb
     ports:
-      - "5432:5432"
+      - "5433:5432"
 
 volumes:
   postgres_data:
