--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-psycopg2-binary
-alembic
+fastapi==0.103.2
+uvicorn==0.17.6
+psycopg2-binary==2.9.3
+sqlalchemy==2.0.21
+asyncpg==0.28.0
+aiosqlite==0.19.0
+alembic==1.12.0
 pydantic[email]
-python-dotenv
-passlib[bcrypt]
-python-jose[cryptography]
-pytest
-httpx
+locust==2.4.2
+python-dotenv==1.0.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+pytest==7.4.2
+httpx>=0.23.0
+pytest-asyncio
+python-multipart
